--- a/templates/Web/layout.html.twig
+++ b/templates/Web/layout.html.twig
@@ -5,22 +5,31 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Black Friday Posadas - 2019">
+    <meta name="author" content="Matias Solis de la Torre, CCIP">
 
-    <title>One Page Wonder - Start Bootstrap Template</title>
+    <title>Black Friday Posadas 2019</title>
 
     <!-- Bootstrap core CSS -->
-{#    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">#}
+    {#    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">#}
 
     <!-- Custom fonts for this template -->
     <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i"
+          rel="stylesheet">
 
     <!-- Custom styles for this template -->
-{#    <link href="css/one-page-wonder.min.css" rel="stylesheet">#}
+    {#    <link href="css/one-page-wonder.min.css" rel="stylesheet">#}
     {{ encore_entry_link_tags('css/web') }}
 
+    <style>
+        section.page {
+            margin-top: 3rem;
+        }
+    </style>
+
+    {% block stylesheets %}
+    {% endblock stylesheets %}
 </head>
 
 <body>
@@ -28,17 +37,18 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="#">CCIP</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="{{ path('web') }}">CCIP</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Comercios</a>
+                    <a class="nav-link" href="{{ path('comercios') }}">Comercios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Consumidores</a>
+                    <a class="nav-link" href="{{ path('rubros') }}">Consumidores</a>
                 </li>
             </ul>
         </div>
@@ -58,8 +68,7 @@
 </footer>
 
 <!-- Bootstrap core JavaScript -->
-{#<script src="vendor/jquery/jquery.min.js"></script>#}
-{#<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>#}
+
 {{ encore_entry_script_tags('js/web') }}
 </body>
 
