--- a/templates/bundles/FOSUserBundle/Security/login_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login_content.html.twig
@@ -1,7 +1,58 @@
 {% trans_default_domain 'FOSUserBundle' %}
+{% block stylesheets %}
+    <style>
+        html,
+        body {
+            height: 100%;
+        }
 
-<p class="login-box-msg">Inicie Sesión</p>
+        body {
+            display: -ms-flexbox;
+            display: flex;
+            -ms-flex-align: center;
+            align-items: center;
+            padding-top: 40px;
+            padding-bottom: 40px;
+            background-color: #f5f5f5;
+        }
 
+        .form-signin {
+            width: 100%;
+            max-width: 330px;
+            padding: 15px;
+            margin: auto;
+        }
+
+        .form-signin .checkbox {
+            font-weight: 400;
+        }
+
+        .form-signin .form-control {
+            position: relative;
+            box-sizing: border-box;
+            height: auto;
+            padding: 10px;
+            font-size: 16px;
+        }
+
+        .form-signin .form-control:focus {
+            z-index: 2;
+        }
+
+        .form-signin input[type="email"] {
+            margin-bottom: -1px;
+            border-bottom-right-radius: 0;
+            border-bottom-left-radius: 0;
+        }
+
+        .form-signin input[type="password"] {
+            margin-bottom: 10px;
+            border-top-left-radius: 0;
+            border-top-right-radius: 0;
+        }
+
+    </style>
+{% endblock stylesheets %}
 {% if error %}
     <div class="alert alert-danger alert-dismissable">
         <button class="close" aria-hidden="true" data-dismiss="alert" type="button">×</button>
@@ -13,40 +64,24 @@
     </div>
 {% endif %}
 
-<form action="{{ path("fos_user_security_check") }}" method="post">
+<form class="form-signin" action="{{ path("fos_user_security_check") }}" method="post">
     {% if csrf_token %}
         <input type="hidden" name="_csrf_token" value="{{ csrf_token }}"/>
     {% endif %}
-
-    <div class="form-group has-feedback">
-        <input class="form-control" type="text" id="username" name="_username" value="{{ last_username }}"
-               placeholder="{{ 'security.login.username'|trans }}" required="required"/>
-        <span class="glyphicon glyphicon-user form-control-feedback"></span>
-    </div>
-    <div class="form-group has-feedback">
-        <input class="form-control" type="password" id="password" name="_password" required="required"
-               placeholder="{{ 'security.login.password'|trans }}"/>
-        <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-    </div>
-    <div class="row">
-        <div class="col-xs-8">
-            {#<div class="checkbox icheck">#}
-            {#<label>#}
-            {#<input type="checkbox" id="remember_me" name="_remember_me" value="on">#}
-            {#{{ 'security.login.remember_me'|trans }}#}
-            {#</label>#}
-            {#</div>#}
-        </div>
-        <!-- /.col -->
-        <div class="col-xs-4">
-            <input type="submit" name="_submit" class="btn btn-primary btn-block btn-flat"
-                   value="{{ 'security.login.submit'|trans }}"/>
-        </div>
-        <!-- /.col -->
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <a href="{{ path('fos_user_resetting_request') }}">Olvidé mi contraseña</a><br>
-        </div>
-    </div>
+    <img class="mb-4" src="/docs/4.3/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+    <h1 class="h3 mb-3 font-weight-normal">Inicie Sesión</h1>
+    <label for="inputUser" class="sr-only">{{ 'security.login.username'|trans }}</label>
+    <input type="text" id="inputUser" name="_username" class="form-control" placeholder="{{ 'security.login.username'|trans }}"
+           required="" autofocus="">
+    <label for="inputPassword" class="sr-only">{{ 'security.login.password'|trans }}</label>
+    <input type="password" id="inputPassword" class="form-control" placeholder="{{ 'security.login.password'|trans }}"
+           required="" name="_password">
+    {#    <div class="checkbox mb-3">#}
+    {#        <label>#}
+    {#            <input type="checkbox" value="remember-me"> Remember me#}
+    {#        </label>#}
+    {#    </div>#}
+    <input class="btn btn-lg btn-primary btn-block" type="submit" name="_submit"
+           value="{{ 'security.login.submit'|trans }}">
+    <p class="mt-5 mb-3 text-muted">© 2017-2019</p>
 </form>
