--- a/templates/bundles/FOSUserBundle/layout.html.twig
+++ b/templates/bundles/FOSUserBundle/layout.html.twig
@@ -1,26 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>BlackFriday Posadas | Login</title>
-    <!-- Tell the browser to be responsive to screen width -->
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Login Black Friday Posadas">
+    <meta name="author" content="Matias Solis de la Torre">
 
+    <title>Black Friday Posadas - Login</title>
 
+    <link rel="canonical" href="http://blackfridayposadas.com.ar/login">
+
+    <!-- Bootstrap core CSS -->
     {{ encore_entry_link_tags('css/login') }}
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
-    <!-- Google Font -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+    <style>
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+        }
+
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+                font-size: 3.5rem;
+            }
+        }
+    </style>
+    {% block stylesheets %}
+    {% endblock stylesheets %}
+    <!-- Custom styles for this template -->
+    <link href="signin.css" rel="stylesheet">
 </head>
-<body class="hold-transition login-page">
+<body class="text-center">
+
 {% if app.request.hasPreviousSession %}
     {% for type, messages in app.session.flashbag.all() %}
         {% for message in messages %}
@@ -30,31 +46,11 @@
         {% endfor %}
     {% endfor %}
 {% endif %}
-<div class="login-box">
-    <div class="login-logo">
-{#        <a href="#"><b>Admin</b>LTE</a>#}
-        <img class="img-responsive" src="{{ asset('build/images/isologo.png') }}">
-    </div>
-    <!-- /.login-logo -->
-    <div class="login-box-body">
-        {% block fos_user_content %}
-        {% endblock fos_user_content %}
 
-    </div>
-    <!-- /.login-box-body -->
-</div>
-<!-- /.login-box -->
+{% block fos_user_content %}
+{% endblock fos_user_content %}
 
-
-{{ encore_entry_script_tags('js/login') }}
-{#<script>#}
-    {#$(function () {#}
-        {#$('input').iCheck({#}
-            {#checkboxClass: 'icheckbox_square-blue',#}
-            {#radioClass: 'iradio_square-blue',#}
-            {#increaseArea: '20%' /* optional */#}
-        {#});#}
-    {#});#}
-{#</script>#}
 </body>
 </html>
+
+{{ encore_entry_script_tags('js/login') }}
