Se agrega logo. Se agrega footer. Se corrigen secciones.

--- a/assets/css/web.scss
+++ b/assets/css/web.scss
@@ -1,2 +1,5 @@
+$primary: #D41B20;
+$brand-primary: $primary;
+$secondary: #000;
 @import "~bootstrap/scss/bootstrap";
 @import "~startbootstrap-one-page-wonder/scss/one-page-wonder";
