--- a/templates/Web/rubros.html.twig
+++ b/templates/Web/rubros.html.twig
@@ -1,4 +1,6 @@
 {% extends '/Web/layout.html.twig' %}
+{% block meta_description %}Sección rubros de los comercios adheridos Black Frdiday 2019{% endblock %}
+{% block title %}Rubros - {% endblock %}
 
 {% block content %}
 
