--- a/templates/Web/index.html.twig
+++ b/templates/Web/index.html.twig
@@ -7,7 +7,7 @@
                 <h1 class="masthead-heading mb-0">Black Friday Posadas</h1>
                 <h2 class="masthead-subheading mb-0">Del 1 al 4 de Agosto</h2>
                 <a href="{{ path('rubros') }}" class="btn btn-primary btn-xl rounded-pill mt-5">Consumidores</a>
-                <a href="#" class="btn btn-secondary btn-xl rounded-pill mt-5">Comercios</a>
+                <a href="{{ path('para_comercios') }}" class="btn btn-secondary btn-xl rounded-pill mt-5">Para empresas</a>
             </div>
         </div>
         <div class="bg-circle-1 bg-circle"></div>
