--- a/templates/Web/layout.html.twig
+++ b/templates/Web/layout.html.twig
@@ -5,10 +5,11 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Black Friday Posadas - 2019">
+    <meta name="description"
+          content="{% block meta_description %}Black Friday Posadas - 2019{% endblock meta_description %}">
     <meta name="author" content="Matias Solis de la Torre, CCIP">
 
-    <title>Black Friday Posadas 2019</title>
+    <title>{% block title %}{% endblock title %}Black Friday Posadas 2019</title>
 
     <!-- Bootstrap core CSS -->
     {#    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">#}
@@ -45,10 +46,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('comercios') }}">Comercios</a>
+                    <a class="nav-link" href="{{ path('para_comercios') }}">Sección Empresas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('rubros') }}">Consumidores</a>
+                    <a class="nav-link" href="{{ path('rubros') }}">Rubros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('comercios') }}">Comercios</a>
                 </li>
             </ul>
         </div>
@@ -62,7 +66,17 @@
 <!-- Footer -->
 <footer class="py-5 bg-black">
     <div class="container">
-        <p class="m-0 text-center text-white small">Copyright &copy; Black Friday Posadas 2019</p>
+        <div class="row">
+            <div class="col-md-4">
+                <p class="m-0 text-center text-white small">Copyright &copy; Black Friday Posadas 2019</p>
+            </div>
+            <div class="col-md-4">
+                <img class="img-fluid" src="{{ asset('build/images/ccip_isologo.jpg') }}">
+            </div>
+            <div class="col-md-4">
+                <img class="img-fluid" src="{{ asset('build/images/ahora-misiones-isologo.png') }}">
+            </div>
+        </div>
     </div>
     <!-- /.container -->
 </footer>
