--- a/templates/Web/layout.html.twig
+++ b/templates/Web/layout.html.twig
@@ -9,6 +9,10 @@
           content="{% block meta_description %}Black Friday Posadas - 2019{% endblock meta_description %}">
     <meta name="author" content="Matias Solis de la Torre, CCIP">
 
+    <meta name="theme-color" content="#D41B20">
+    <meta name="msapplication-navbutton-color" content="#D41B20">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#D41B20">
+
     <title>{% block title %}{% endblock title %}Black Friday Posadas 2019</title>
 
     <!-- Bootstrap core CSS -->
@@ -27,6 +31,10 @@
         section.page {
             margin-top: 3rem;
         }
+
+        .logo-menu {
+            width: 10rem;
+        }
     </style>
 
     {% block stylesheets %}
@@ -36,23 +44,31 @@
 <body>
 
 <!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+{#<nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">#}
+<nav class="navbar navbar-expand-lg fixed-top bg-light">
     <div class="container">
-        <a class="navbar-brand" href="{{ path('web') }}">CCIP</a>
+        <a class="navbar-brand" href="{{ path('web') }}">
+            <img class="img-fluid logo-menu" src="{{ asset('build/images/ccim-color.png') }}" alt="logo">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
+                {% if is_granted("ROLE_ADMIN") or is_granted("ROLE_USER") %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('easyadmin') }}"><strong>| ADMINISTRADOR |</strong></a>
+                    </li>
+                {% endif %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('para_comercios') }}">Sección Empresas</a>
+                    <a class="nav-link" href="{{ path('para_comercios') }}">Comercios</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('rubros') }}">Rubros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('comercios') }}">Comercios</a>
+                    <a class="nav-link" href="{{ path('comercios') }}">Comercios adheridos</a>
                 </li>
             </ul>
         </div>
@@ -64,17 +80,18 @@
 {% endblock content %}
 
 <!-- Footer -->
-<footer class="py-5 bg-black">
+<footer class="py-5 bg-light">
     <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <p class="m-0 text-center text-white small">Copyright &copy; Black Friday Posadas 2019</p>
+        <div class="row text-center">
+            <div class="col-md-4 align-self-center">
+                {#                <p class="m-0 text-center text-white small">Copyright &copy; Black Friday Posadas 2019</p>#}
+                <img class="img-fluid" src="{{ asset('build/images/ccim-color.png') }}">
             </div>
-            <div class="col-md-4">
-                <img class="img-fluid" src="{{ asset('build/images/ccip_isologo.jpg') }}">
+            <div class="col-md-4 align-self-center">
+                <img class="img-fluid" src="{{ asset('build/images/misiones-color.png') }}">
             </div>
-            <div class="col-md-4">
-                <img class="img-fluid" src="{{ asset('build/images/ahora-misiones-isologo.png') }}">
+            <div class="col-md-4 align-self-center">
+                <img class="img-fluid w-50" src="{{ asset('build/images/logo-posadas.png') }}">
             </div>
         </div>
     </div>
