--- a/templates/Web/consumidores.html.twig
+++ b/templates/Web/consumidores.html.twig
@@ -3,6 +3,8 @@
 
 {% block content %}
 
+{#    TODO Agunos consejos para que tengas en cuenta sacar textual de buenfinde.com.ar #}
+
     <section class="page">
         <div class="container">
             <div class="row align-items-center">
