--- a/templates/Web/layout.html.twig
+++ b/templates/Web/layout.html.twig
@@ -100,10 +100,10 @@
                     </li>
                 {% endif %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('para_comercios') }}">Comercios</a>
+                    <a class="nav-link" href="{{ path('para_comercios') }}">Info <br>para Comercios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('comercios') }}">Consumidores</a>
+                    <a class="nav-link" href="{{ path('comercios') }}">Comercios <br>participantes</a>
                 </li>
 
                 <li class="nav-item">
