--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,87 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" type="text/x-icon" href="{{ asset('favicon.png') }}">
-    <title>{% block title %}Bienvenido!{% endblock %} | Blackfriday Posadas</title>
-    <!-- Tell the browser to be responsive to screen width -->
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+
+    <title>{% block title %}{% endblock %} | Blackfriday Posadas</title>
 
     {{ encore_entry_link_tags('css/adminlte') }}
-    {{ encore_entry_link_tags('css/app') }}
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-
-    {% block stylesheets %}{% endblock %}
+    <!-- Google Font: Source Sans Pro -->
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/b4616f2534.js"></script>
     {{ encore_entry_script_tags('js/adminlte') }}
 </head>
-<body class="hold-transition skin-green sidebar-mini">
+<body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
 <div class="wrapper">
+    <!-- Navbar -->
+    <nav class="main-header navbar navbar-expand navbar-white navbar-light border-bottom">
+        <!-- Left navbar links -->
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
+            </li>
+        </ul>
 
-    <header class="main-header">
-        <!-- Logo -->
-        <a href="{{ path('administrador') }}" class="logo">
-            <!-- mini logo for sidebar mini 50x50 pixels -->
-            <span class="logo-mini"><b>B</b>FP</span>
-            <!-- logo for regular state and mobile devices -->
-            <span class="logo-lg"><b>Black Friday</b> Posadas</span>
+
+        <!-- Right navbar links -->
+        <ul class="navbar-nav ml-auto">
+            <!-- Messages Dropdown Menu -->
+
+        </ul>
+    </nav>
+    <!-- /.navbar -->
+
+    <!-- Main Sidebar Container -->
+    <aside class="main-sidebar sidebar-light-danger elevation-4">
+        <!-- Brand Logo -->
+        <a href="{{ path('easyadmin') }}" class="brand-link">
+            <img src="{{ asset('build/images/logo.png') }}" alt="AdminLTE Logo"
+                 class="brand-image img-circle elevation-3"
+                 style="opacity: .8">
+            <span class="brand-text font-weight-light">BlackFriday</span>
         </a>
-        <!-- Header Navbar: style can be found in header.less -->
-        <nav class="navbar navbar-static-top">
-            <!-- Sidebar toggle button-->
-            <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
-                <span class="sr-only">Toggle navigation</span>
-            </a>
 
-            <div class="navbar-custom-menu">
-                <ul class="nav navbar-nav">
-
-                    <!-- User Account: style can be found in dropdown.less -->
-                    <li class="dropdown user user-menu">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <img src="{{ asset('build/images/avatar.png') }}" class="user-image" alt="User Image">
-                            <span class="hidden-xs">{{ app.user }}</span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <!-- User image -->
-                            <li class="user-header">
-                                <img src="{{ asset('build/images/avatar.png') }}" class="img-circle" alt="User Image">
-
-                                <p>
-                                    {{ app.user }} - {{ app.user.roles[0] }}
-                                    {#<small>{{ app.user.fechaCreacion | date('d/m/Y') }}</small>#}
-                                </p>
-                            </li>
-
-                            <!-- Menu Footer-->
-                            <li class="user-footer">
-                                <div class="pull-left">
-                                    <a href="{{ path('fos_user_profile_show') }}" class="btn btn-default btn-flat">Perfil</a>
-                                </div>
-                                <div class="pull-right">
-                                    <a href="{{ path('fos_user_security_logout') }}" class="btn btn-default btn-flat">Cerrar Sesión</a>
-                                </div>
-                            </li>
-                        </ul>
-                    </li>
-
-                </ul>
+        <!-- Sidebar -->
+        <div class="sidebar">
+            <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+                <div class="image">
+                    <img src="{{ asset('build/images/avatar.png') }}" class="img-circle elevation-2" alt="User Image">
+                </div>
+                <div class="info">
+                    <a href="#" class="d-block">{{ app.user }} <br> {{ app.user.roles[0] }}</a>
+                </div>
             </div>
-        </nav>
-    </header>
-    <!-- Left side column. contains the logo and sidebar -->
-    <aside class="main-sidebar">
-        <!-- sidebar: style can be found in sidebar.less -->
-        <section class="sidebar">
+
             {{ knp_menu_render('main', {'currentClass': 'active', 'ancestorClass':'active'}) }}
-        </section>
+        </div>
         <!-- /.sidebar -->
     </aside>
 
@@ -90,6 +64,7 @@
 
         <!-- Main content -->
         <section class="content">
+
             {% for flashMessage in app.flashes('success') %}
                 <div class="alert alert-dismissable alert-success">
                     <i class="fa fa-check"></i>
@@ -121,29 +96,39 @@
                 </div>
 
             {% endfor %}
-            {% block body %}{% endblock %}
+
+            <div class="container-fluid">
+                <div class="pt-2">
+                    {% block body %}{% endblock %}
+                </div>
+            </div>
+
         </section>
         <!-- /.content -->
     </div>
     <!-- /.content-wrapper -->
+
+    <!-- Control Sidebar -->
+    <aside class="control-sidebar control-sidebar-dark">
+        <!-- Control sidebar content goes here -->
+    </aside>
+    <!-- /.control-sidebar -->
+
+    <!-- Main Footer -->
     <footer class="main-footer">
-        <div class="pull-right hidden-xs">
-            <b>Versión</b> {{ app_version }}
+        <strong>Copyright &copy; 2019 <a href="http://www.blackfridayposadas.com">BlackFriday Posadas</a>.</strong>
+        Todos los derechos reservados.
+        <div class="float-right d-none d-sm-inline-block">
+            <b>Versión</b> 1.0.0
         </div>
-        <strong>Copyright &copy; 2019 <a target="_blank" href="http://www.blackfridayposadas.com/">{{ app_name }}</a>.</strong> Todos los derechos reservados.
     </footer>
-
-
-    <!-- Add the sidebar's background. This div must be placed
-         immediately after the control sidebar -->
-    <div class="control-sidebar-bg"></div>
 </div>
 <!-- ./wrapper -->
 
 {{ encore_entry_script_tags('js/functions') }}
-<script src="{{ asset('bundles/tetranzselect2entity/js/select2entity.js') }}"></script>
+
+
+{#<script src="{{ asset('bundles/tetranzselect2entity/js/select2entity.js') }}"></script>#}
 {% block javascripts %}{% endblock %}
-
-
 </body>
 </html>
