--- a/templates/Web/footer_info.html.twig
+++ b/templates/Web/footer_info.html.twig
@@ -6,10 +6,10 @@
                 <a target="_blank" href="http://www.cciposadas.com.ar/">Cámara de Comercio e Industria de Posadas</a>
                 <br>
                 <strong>Tel.:</strong> {{ footerInfo.contactoTelefono }} <br>
+                <strong>Cel.:</strong> {{ footerInfo.contactoWhatsapp }} <br>
                 <strong>E-mail:</strong>
-                <a href="mailto:administración@cciposadas.com.ar">administración@cciposadas.com.ar</a> <br>
                 <a href="mailto:camaracomercioccip@gmail.com">camaracomercioccip@gmail.com</a> <br>
-                <a href="mailto:blackfridayposadas@gmail.com">blackfridayposadas@gmail.com</a>
+                <a href="mailto:posadasblackfriday@gmail.com@gmail.com">posadasblackfriday@gmail.com@gmail.com</a>
                 <br>
                 Tucumán N° 1807 esq. Félix de Azara - (3300) Posadas - Misiones - Argentina
             </div>
