--- a/templates/Web/index.html.twig
+++ b/templates/Web/index.html.twig
@@ -123,6 +123,11 @@
                     </div>
                 </div>
             </div>
+            <div class="row mb-5">
+                <div class="col-md-12 text-center">
+                    <a href="{{ path('novedades') }}" class="btn btn-lg btn-primary">Todas las novedades</a>
+                </div>
+            </div>
         </div>
     </section>
 
