--- a/templates/Web/layout.html.twig
+++ b/templates/Web/layout.html.twig
@@ -107,10 +107,10 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#novedades">Novedades</a>
+                    <a class="nav-link" href="{{ path('novedades') }}">Novedades</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#galerias">Galería</a>
+                    <a class="nav-link" href="{{ path('web') }}#galerias">Galería</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('contacto') }}">Contacto</a>
