--- a/templates/Web/contacto.html.twig
+++ b/templates/Web/contacto.html.twig
@@ -71,7 +71,7 @@
                             </a>
                             <p>
                                 {% if contacto.contactoWhatsapp %}
-                                    <a href="https://wa.me/{{ contacto.contactoWhatsapp }}/?text=Hola%20Blackfriday"></a>
+                                    <a href="https://wa.me/{{ contacto.contactoWhatsapp }}/?text=Hola%20Blackfriday">{{ contacto.contactoWhatsapp }}</a>
                                 {% endif %}
                             </p>
                             {#                            <p class="mb-md-0">Mon - Fri, 8:00-22:00</p>#}
@@ -81,13 +81,11 @@
                                 <i class="fas fa-envelope"></i>
                             </a>
                             <p>
-                                <a href="mailto:administración@cciposadas.com.ar">administración@cciposadas.com.ar</a>
-                                <br>
                                 <a href="mailto:camaracomercioccip@gmail.com">camaracomercioccip@gmail.com</a>
                             </p>
 
                             <p class="mb-0">
-                                <a href="mailto:blackfridayposadas@gmail.com">blackfridayposadas@gmail.com</a>
+                                <a href="mailto:posadasblackfriday@gmail.com@gmail.com">posadasblackfriday@gmail.com@gmail.com</a>
                             </p>
                         </div>
                     </div>
