--- a/templates/comercio/new.html.twig
+++ b/templates/comercio/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Comercio{% endblock %}
+{% block title %}Nuevo Comercio{% endblock %}
 
 {% block body %}
 
