fix footer info. fix role prensa menu

--- a/templates/Web/footer_info.html.twig
+++ b/templates/Web/footer_info.html.twig
@@ -9,7 +9,7 @@
                 <strong>Cel.:</strong> {{ footerInfo.contactoWhatsapp }} <br>
                 <strong>E-mail:</strong>
                 <a href="mailto:camaracomercioccip@gmail.com">camaracomercioccip@gmail.com</a> <br>
-                <a href="mailto:posadasblackfriday@gmail.com@gmail.com">posadasblackfriday@gmail.com@gmail.com</a>
+                <a href="mailto:posadasblackfriday@gmail.com">posadasblackfriday@gmail.com</a>
                 <br>
                 Tucumán N° 1807 esq. Félix de Azara - (3300) Posadas - Misiones - Argentina
             </div>
